--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -30,5 +30,11 @@
     border: none;
     padding: 5px 10px;
     cursor: pointer;
-    color: #003580;
+    color: white;
+    background-color: #0071c2;
+}
+
+.navButton:hover{
+    background-color: white;
+    color: #0071c2;
 }
